--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.7",
     "expo-splash-screen": "~0.29.12",
@@ -36,8 +37,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
